--- a/api/v1/schemas/Error.yaml
+++ b/api/v1/schemas/Error.yaml
@@ -14,5 +14,4 @@ properties:
     example: invalid email
   details:
     type: object
-    additionalProperties:
-      type: string
+    additionalProperties: true
