--- a/api/v1/properties/role.yaml
+++ b/api/v1/properties/role.yaml
@@ -1,6 +1,8 @@
 type: integer
 enum:
-  - value: 1
-    name: User
-  - value: 2
-    name: Admin
+  - 1
+  - 2
+description: |
+  0: Invalid
+  1: User
+  2: Admin
