--- a/api/v1/schemas/Organization.yaml
+++ b/api/v1/schemas/Organization.yaml
@@ -6,36 +6,54 @@ required:
   - short_name
   - inn
   - okpo
-  - orgn
+  - ogrn
   - kpp
   - tax_code
   - address
   - avatar_url
   - emails
   - phones
-  - messangers
+  - messengers
   - created_at
   - updated_at
 properties:
   id:
     type: integer
   brand_name:
-    $ref: "../../properties/name.yaml"
+    $ref: "../properties/name.yaml"
   full_name:
-    $ref: "../../properties/name.yaml"
+    $ref: "../properties/name.yaml"
   short_name:
-    $ref: "../../properties/name.yaml"
+    $ref: "../properties/name.yaml"
   inn:
-    $ref: "../../properties/inn.yaml"
-  okpo
-    $ref: "../../properties/name.yaml"
-  orgn
-  kpp
-  tax_code
-  address
-  avatar_url
-  emails
-  phones
-  messangers
-  created_at
-  updated_at
+    $ref: "../properties/inn.yaml"
+  okpo:
+    $ref: "../properties/okpo.yaml"
+  ogrn:
+    $ref: "../properties/ogrn.yaml"
+  kpp:
+    $ref: "../properties/kpp.yaml"
+  tax_code:
+    $ref: "../properties/tax_code.yaml"
+  address:
+    type: string
+  avatar_url:
+    $ref: "../properties/url.yaml"
+  emails:
+    type: array
+    items:
+      $ref: "Contact_info.yaml"
+  phones:
+    type: array
+    items:
+      $ref: "Contact_info.yaml"
+  messengers:
+    type: array
+    items:
+      $ref: "Contact_info.yaml"
+  created_at:
+    type: string
+    format: date-time
+  updated_at:
+    type: string
+    format: date-time
