--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /src
 COPY . .
 
 RUN apk upgrade --no-cache && \
-    CGO_ENABLED=0 GOOS=linux go build -mod=readonly -a -installsuffix cgo -o admin ./cmd/admin
+    CGO_ENABLED=0 GOOS=linux go build -mod=readonly -a -installsuffix cgo -o admin ./cmd/core
 
 FROM alpine:3.20
 
@@ -17,10 +17,9 @@ RUN addgroup -g 101 app && \
     apk upgrade --no-cache
 
 WORKDIR /app
-COPY --from=builder --chown=app:app /src/admin .
-COPY --from=builder --chown=app:app /src/config.yaml .
+COPY --from=builder --chown=app:app /src/core .
 COPY --from=builder --chown=app:app /src/swaggerui/ ./swaggerui/
 
 USER app
 
-CMD ["/app/admin"]
+CMD ["/app/core"]
