--- a/api/bundle.yaml
+++ b/api/bundle.yaml
@@ -187,6 +187,97 @@ paths:
                         type: string
         default:
           $ref: '#/components/responses/Error'
+  /v1/tenders/create:
+    post:
+      tags:
+        - tenders
+      summary: Create tender
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - name
+                - city
+                - price
+                - is_contract_price
+                - is_nds_price
+                - floor_space
+                - services
+                - objects
+                - reception_start
+                - reception_end
+                - work_start
+                - work_end
+              properties:
+                name:
+                  type: string
+                city:
+                  type: integer
+                price:
+                  type: number
+                is_contract_price:
+                  type: boolean
+                is_nds_price:
+                  type: boolean
+                floor_space:
+                  type: integer
+                description:
+                  type: string
+                wishes:
+                  type: string
+                specification:
+                  $ref: '#/components/schemas/url'
+                attachments:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/url'
+                  maxItems: 8
+                services:
+                  type: array
+                  items:
+                    type: integer
+                objects:
+                  type: array
+                  items:
+                    type: integer
+                reception_start:
+                  type: string
+                  format: date-time
+                  description: дата начала приема заявок
+                reception_end:
+                  type: string
+                  format: date-time
+                  description: дата окончания приема заявок
+                work_start:
+                  type: string
+                  format: date-time
+                work_end:
+                  type: string
+                  format: date-time
+      responses:
+        '201':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - data
+                properties:
+                  data:
+                    type: object
+                    required:
+                      - tender
+                    properties:
+                      tender:
+                        $ref: '#/components/schemas/Tender'
+        default:
+          $ref: '#/components/responses/Error'
 components:
   securitySchemes:
     cookieAuth:
@@ -388,6 +479,99 @@ components:
           type: string
           format: date-time
         updated_at:
+          type: string
+          format: date-time
+    Tender:
+      type: object
+      required:
+        - id
+        - name
+        - city
+        - region
+        - price
+        - is_contract_price
+        - is_nds_price
+        - floor_space
+        - description
+        - wishes
+        - specification
+        - attachments
+        - services
+        - objects
+        - reception_start
+        - reception_end
+        - work_start
+        - work_end
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        city:
+          type: string
+        organization:
+          $ref: '#/components/schemas/Organization'
+        region:
+          type: string
+        price:
+          type: number
+        is_contract_price:
+          type: boolean
+        is_nds_price:
+          type: boolean
+        floor_space:
+          type: integer
+        description:
+          type: string
+        wishes:
+          type: string
+        specification:
+          $ref: '#/components/schemas/url'
+        attachments:
+          type: array
+          items:
+            $ref: '#/components/schemas/url'
+          maxItems: 8
+        services:
+          type: array
+          items:
+            type: object
+            required:
+              - id
+              - name
+            properties:
+              id:
+                type: integer
+              parent_id:
+                type: integer
+              name:
+                type: string
+        objects:
+          type: array
+          items:
+            type: object
+            required:
+              - id
+              - name
+            properties:
+              id:
+                type: integer
+              parent_id:
+                type: integer
+              name:
+                type: string
+        reception_start:
+          type: string
+          format: date-time
+          description: дата начала приема заявок
+        reception_end:
+          type: string
+          format: date-time
+          description: дата окончания приема заявок
+        work_start:
+          type: string
+          format: date-time
+        work_end:
           type: string
           format: date-time
   responses:
