--- a/api/v1/schemas/catalog/Services.yaml
+++ b/api/v1/schemas/catalog/Services.yaml
@@ -1,13 +1,3 @@
 type: array
 items:
-  type: object
-  required:
-    - id
-    - name
-  properties:
-    id:
-      type: integer
-    parent_id:
-      type: integer
-    name:
-      type: string
+  $ref: "Service.yaml"
